configs/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msdemo
  namespace: ms-demo
spec:
  ports:
  - name: http
    port: 8085
    protocol: TCP
    targetPort: 8085
  selector:
    app: msdemo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
