configs/40-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: msdemo
  namespace: ms-demo
spec:
  port:
    targetPort: 8085
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: msdemo
    weight: 100
  wildcardPolicy: None
